# pyanpost

./: README.md  pyproject.toml
src/anpost/: __init__.py  __main__.py  client.py  exceptions.py  models.py
tests/: test_client.py
